--- a/i18n/eduComponents-de.po
+++ b/i18n/eduComponents-de.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: ECLecture\n"
-"POT-Creation-Date: 2006-04-05 17:16+0000\n"
+"POT-Creation-Date: 2006-04-07 16:06+0000\n"
 "PO-Revision-Date: 2006-04-05 11:37+0100\n"
 "Last-Translator: Mario Amelung <amelung@iws.cs.uni-magdeburg.de>\n"
 "Language-Team: WDOK <amelung@iws.cs.uni-magdeburg.de>\n"
@@ -24,7 +24,7 @@ msgstr "Freitag"
 #. Default: "Icon"
 #: ECLecture.py
 msgid "Icon"
-msgstr "Icon"
+msgstr "Symbol"
 
 #. Default: "Monday"
 #: ECLecture.py
@@ -71,20 +71,30 @@ msgstr "Mittwoch"
 msgid "daily"
 msgstr "täglich"
 
-#. Default: "You can associate a group with this lecture to represent its participants"
-#: ECLecture.py
+#. Default: "You can associate a group with this course to represent its participants"
+#: content/ECLecture.py
 msgid "help_associated_group"
 msgstr "Sie können dieser Lehrveranstaltung eine Gruppe zuordnen, die ihre Teilnehmer repräsentiert."
 
-#. Default: "Enter available resources for this lecture"
-#: ECLecture.py
+#. Default: "Enter available resources for this course. Title  is the name of a resource as shown to the user; URL must be a path inside this site or an URL to an external source; Icon is optional."
+#: content/ECLecture.py
 msgid "help_available_resources"
-msgstr "Tragen Sie hier die für die Lehrveranstaltung verfügbaren Materialien ein. Ein Eingtrag besteht aus dem Titel und dem Pfad innerhalb diese Seite bzw. einem URL zu einer externen Quelle. Optional können Sie ein Icon angeben."
+msgstr "Tragen Sie hier die für die Lehrveranstaltung verfügbaren Materialien ein. Ein Eingtrag besteht aus dem Titel und dem Pfad innerhalb diese Seite bzw. einem URL zu einer externen Quelle. Optional können Sie ein Symbol angeben."
 
-#. Default: "Enter lecture information"
-#: ECLecture.py
+#. Default: "Enter course information"
+#: content/ECLecture.py
 msgid "help_body_text"
 msgstr "Geben Sie hier den Haupttext ein"
+
+#. Default: "Enter the type of this course (e.g., Lecture or Lab Exercise)"
+#: content/ECLecture.py
+msgid "help_course_type"
+msgstr "Geben Sie hier den Typ der Veranstaltung an (z. B. »Vorlesung« oder »Übung«)"
+
+#. Default: "Credits which can be gained in this course"
+#: content/ECLecture.py
+msgid "help_credits"
+msgstr "Leistungspunkte, die in dieser Veranstaltung erworben werden können"
 
 #. Default: "Link to the directory entry for this lecture"
 #: ./skins/ECLecture/ecl_view.pt
@@ -92,59 +102,84 @@ msgid "help_directory_entry"
 msgstr "Link zum Verzeichniseintrag"
 
 #. Default: "Last regular date"
-#: ECLecture.py
+#: content/ECLecture.py
 msgid "help_end_date"
 msgstr "Letzter regulärer Termin"
 
-#. Default: "Date for the first session for this lecture"
-#: ECLecture.py
+#. Default: "Date for the first session for this course"
+#: content/ECLecture.py
 msgid "help_first_session"
 msgstr "Termin für eine Vorbesprechung"
 
-#. Default: "Link to the registration for this lecture"
-#: ECLecture.py
+#. Default: "Enter user name of the instructor"
+#: content/ECLecture.py
+msgid "help_instructor"
+msgstr "Benutzername des Dozenten"
+
+#. Default: "Link to the registration for this course"
+#: content/ECLecture.py
 msgid "help_join_url"
 msgstr "Link zur Anmeldeseite"
 
-#. Default: "Enter user name of the lecturer"
-#: ECLecture.py
-msgid "help_lecturer"
-msgstr "Benutzername des Dozenten"
+#. Default: "Location for this course"
+#: content/ECLecture.py
+msgid "help_location"
+msgstr "Ort der Lehrveranstaltung"
 
-#. Default: "How often this lecture takes place"
-#: ECLecture.py
+#. Default: "If there is an enrollment limit, specify the maximum number of participants"
+#: content/ECLecture.py
+msgid "help_max_participants"
+msgstr "Wenn die Veranstaltung auf eine bestimmte Teilnehmerzahl begrenzt ist, geben sie die Höchstzahl hier an"
+
+#. Default: "Describe which prerequisites are required for this course"
+#: content/ECLecture.py
+msgid "help_prereq"
+msgstr "Beschreiben Sie die Voraussetzungen, die für den Besuch dieser Veranstaltung nötig sind"
+
+#. Default: "How often this course takes place"
+#: content/ECLecture.py
 msgid "help_recurrence"
 msgstr "Turnus dieser Lehrveranstaltung"
 
-#. Default: "Room for this lecture"
-#: ECLecture.py
-msgid "help_room"
-msgstr "Ort der Lehrveranstaltung"
-
 #. Default: "First regular date"
-#: ECLecture.py
+#: content/ECLecture.py
 msgid "help_start_date"
 msgstr "Erster regulärer Termin"
 
-#. Default: "Start and end times of this lecture
-#: ECLecture.py
+#. Default: "Describe for which audience this course is intended"
+#: content/ECLecture.py
+msgid "help_target"
+msgstr "Geben Sie an, für welche Zielgruppe die Veranstaltung gedacht ist"
+
+#. Default: "Start and end times of this course"
+#: content/ECLecture.py
 msgid "help_time_period"
 msgstr "Begin und Ende der Lehrveranstaltung"
 
-#. Default: "Associated group: ${groupname}"
+#. Default: "Associated group"
 #: ./skins/ECLecture/ecl_participants.pt
 msgid "label_associated_group"
 msgstr "Zugeordnete Gruppe"
 
 #. Default: "Available resources"
-#: ECLecture.py
+#: content/ECLecture.py
 msgid "label_available_resourcess"
 msgstr "Materialien"
 
 #. Default: "Body Text"
-#: ECLecture.py
+#: content/ECLecture.py
 msgid "label_body_text"
 msgstr "Haupttext"
+
+#. Default: "Course type"
+#: ./skins/ECLecture/ecl_view.pt
+msgid "label_course_type"
+msgstr "Veranstaltungstyp"
+
+#. Default: "Credits"
+#: ./skins/ECLecture/ecl_view.pt
+msgid "label_credits"
+msgstr "Punkte"
 
 #. Default: "Directory"
 #: ./skins/ECLecture/ecl_view.pt
@@ -152,12 +187,12 @@ msgid "label_directory"
 msgstr "Verzeichnis"
 
 #. Default: "Directory entry"
-#: ECLecture.py
+#: content/ECLecture.py
 msgid "label_directory_entry"
 msgstr "Link zum Verzeichniseintrag"
 
 #. Default: "End date"
-#: ECLecture.py
+#: content/ECLecture.py
 msgid "label_end_date"
 msgstr "Letzter Termin"
 
@@ -166,18 +201,33 @@ msgstr "Letzter Termin"
 msgid "label_first_session"
 msgstr "Vorbesprechung"
 
+#. Default: "Instructor"
+#: ./skins/ECLecture/ecl_view.pt
+msgid "label_instructor"
+msgstr "Dozent"
+
 #. Default: "Registration link"
-#: ECLecture.py
+#: content/ECLecture.py
 msgid "label_join_url"
 msgstr "Link zur Anmeldung"
 
-#. Default: "Lecturer"
+#. Default: "Location"
 #: ./skins/ECLecture/ecl_view.pt
-msgid "label_lecturer"
-msgstr "Dozent"
+msgid "label_location"
+msgstr "Raum"
+
+#. Default: "Enrollment limit"
+#: ./skins/ECLecture/ecl_view.pt
+msgid "label_max_participants"
+msgstr "Teilnehmerzahl"
+
+#. Default: "Prerequisites"
+#: ./skins/ECLecture/ecl_view.pt
+msgid "label_prereq"
+msgstr "Voraussetzungen"
 
 #. Default: "Recurrence"
-#: ECLecture.py
+#: content/ECLecture.py
 msgid "label_recurrence"
 msgstr "Turnus"
 
@@ -196,15 +246,15 @@ msgstr "Anmeldung"
 msgid "label_resources_legend"
 msgstr "Materialien"
 
-#. Default: "Room"
-#: ./skins/ECLecture/ecl_view.pt
-msgid "label_room"
-msgstr "Raum"
-
-#. Default: "Start date",
-#: ECLecture.py
+#. Default: "Start date"
+#: content/ECLecture.py
 msgid "label_start_date"
 msgstr "Erster Termin"
+
+#. Default: "Target group"
+#: ./skins/ECLecture/ecl_view.pt
+msgid "label_target"
+msgstr "Zielgruppe"
 
 #. Default: "Time"
 #: ./skins/ECLecture/ecl_view.pt
@@ -212,7 +262,7 @@ msgid "label_time"
 msgstr "Zeit"
 
 #. Default: "Time period"
-#: ECLecture.py
+#: content/ECLecture.py
 msgid "label_time_period"
 msgstr "Zeit"
 
@@ -233,7 +283,6 @@ msgstr "wöchentlich"
 
 #. Default: "yearly"
 #: ECLecture.py
-#, fuzzy
 msgid "yearly"
 msgstr "jährlich"
 
