--- a/i18n/schemas.pot
+++ b/i18n/schemas.pot
@@ -17,192 +17,173 @@ msgstr ""
 "Preferred-Encodings: utf-8 latin1\n"
 "Domain: eduComponents\n"
 
-#. Default: "Registration link"
-#: ECLecture.py
-msgid "label_join_url"
-msgstr ""
+#. Default: "Course type"
+#: content/ECLecture.py
+msgid = "label_course_type"
+msgstr = ""
 
-#. Default: "Link to the registration for this lecture"
-#: ECLecture.py
-msgid "help_join_url",
-msgstr ""
+#. Default: "Enter the type of this course (e.g., Lecture or Lab Exercise)"
+#: content/ECLecture.py
+msgid = "help_course_type"
+msgstr = ""
 
-#. Default: "First session"
-#: ECLecture.py
-msgid "label_first_session"
-msgstr ""
+#. Default: "Instructor"
+#: content/ECLecture.py
+msgid = "label_instructor"
+msgstr = ""
 
-#. Default: "Date for the first session for this lecture"
-#: ECLecture.py
-msgid "help_first_session"
-msgstr ""
-
-#. Default: "Room for this lecture"
-#: ECLecture.py
-msgid "help_room",
-msgstr ""
-
-#. Default: "Directory entry"
-#: ECLecture.py
-msgid "label_directory_entry"
-msgstr ""
-
-#. Default: "Link to the directory entry for this lecture"
-#: ECLecture.py
-msgid "help_directory_entry"
-msgstr ""
-
-#. Default: "Associated group"
-#: ECLecture.py
-msgid "label_associated_group"
-msgstr ""
-
-#. Default: "You can associate a group with this lecture to represent its participants"
-#: ECLecture.py
-msgid "help_associated_group"
-msgstr ""
-
-#. Default: "Available resources"
-#: ECLecture.py
-msgid "label_available_resourcess"
-msgstr ""
-
-#. Default: "Enter available resources for this lecture"
-#: ECLecture.py
-msgid "help_available_resources"
-msgstr ""
-
-#. Default: "Body Text"
-#: ECLecture.py
-msgid "label_body_text",
-msgstr ""
-
-#. Default: "Enter lecture information"
-#: ECLecture.py
-msgid "help_body_text"
-msgstr ""
-
-#. Default: "Lecturer"
-#: ECLecture.py
-msgid "label_lecturer"
-msgstr ""
-
-#. Default: "Enter user name of the lecturer"
-#: ECLecture.py
-msgid "help_lecturer"
-msgstr ""
+#. Default: "Enter user name of the instructor"
+#: content/ECLecture.py
+msgid = "help_instructor"
+msgstr = ""
 
 #. Default: "Time period"
-#: ECLecture.py
-msgid "label_time_period"
-msgstr ""
+#: content/ECLecture.py
+msgid = "label_time_period"
+msgstr = ""
 
-#. Default: "Start and end times of this lecture
-#: ECLecture.py
-msgid "help_time_period"
-msgstr ""
+#. Default: "Start and end times of this course"
+#: content/ECLecture.py
+msgid = "help_time_period"
+msgstr = ""
 
-#. Default: "Start date",
-#: ECLecture.py
-msgid "label_start_date"
-msgstr ""
+#. Default: "Start date"
+#: content/ECLecture.py
+msgid = "label_start_date"
+msgstr = ""
 
 #. Default: "First regular date"
-#: ECLecture.py
-msgid "help_start_date"
-msgstr ""
+#: content/ECLecture.py
+msgid = "help_start_date"
+msgstr = ""
 
 #. Default: "End date"
-#: ECLecture.py 
-msgid "label_end_date"
-msgstr ""
+#: content/ECLecture.py
+msgid = "label_end_date"
+msgstr = ""
 
 #. Default: "Last regular date"
-#: ECLecture.py
-msgid "help_end_date"
-msgstr ""
+#: content/ECLecture.py
+msgid = "help_end_date"
+msgstr = ""
 
 #. Default: "Recurrence"
-#: ECLecture.py
-msgid "label_recurrence"
-msgstr ""
+#: content/ECLecture.py
+msgid = "label_recurrence"
+msgstr = ""
 
-#. Default: "How often this lecture takes place"
-#: ECLecture.py
-msgid "help_recurrence"
-msgstr ""
+#. Default: "How often this course takes place"
+#: content/ECLecture.py
+msgid = "help_recurrence"
+msgstr = ""
 
-#. Default: "Title"
-#: ECLecture.py
-msgid "Title"
-msgstr ""
+#. Default: "First session"
+#: content/ECLecture.py
+msgid = "label_first_session"
+msgstr = ""
 
-#. Default: "URL"
-#: ECLecture.py
-msgid "URL"
-msgstr ""
+#. Default: "Date for the first session for this course"
+#: content/ECLecture.py
+msgid = "help_first_session"
+msgstr = ""
 
-#. Default: "Icon"
-#: ECLecture.py
-msgid "Icon"
-msgstr ""
+#. Default: "Location"
+#: content/ECLecture.py
+msgid = "label_location"
+msgstr = ""
 
-#. Default: "once"
-#: ECLecture.py
-msgid "once"
-msgstr ""
+#. Default: "Location for this course"
+#: content/ECLecture.py
+msgid = "help_location"
+msgstr = ""
 
-#. Default: "daily"
-#: ECLecture.py
-msgid "daily"
-msgstr ""
+#. Default: "Credits"
+#: content/ECLecture.py
+msgid = "label_credits"
+msgstr = ""
 
-#. Default: "weekly"
-#: ECLecture.py
-msgid "weekly"
-msgstr ""
+#. Default: "Credits which can be gained in this course"
+#: content/ECLecture.py
+msgid = "help_credits"
+msgstr = ""
 
-#. Default: "monthly"
-#: ECLecture.py
-msgid "monthly"
-msgstr ""
+#. Default: "Prerequisites"
+#: content/ECLecture.py
+msgid = "label_prereq"
+msgstr = ""
 
-#. Default: "yearly"
-#: ECLecture.py
-msgid "yearly"
-msgstr ""
+#. Default: "Describe which prerequisites are required for this course"
+#: content/ECLecture.py
+msgid = "help_prereq"
+msgstr = ""
 
-#. Default: "Monday"
-#: ECLecture.py
-msgid "Monday"
-msgstr ""
+#. Default: "Target group"
+#: content/ECLecture.py
+msgid = "label_target"
+msgstr = ""
 
-#. Default: "Tuesday"
-#: ECLecture.py
-msgid "Tuesday"
-msgstr ""
+#. Default: "Describe for which audience this course is intended"
+#: content/ECLecture.py
+msgid = "help_target"
+msgstr = ""
 
-#. Default: "Wednesday"
-#: ECLecture.py
-msgid "Wednesday"
-msgstr ""
+#. Default: "Maximum number of participants"
+#: content/ECLecture.py
+msgid = "label_max_participants"
+msgstr = ""
 
-#. Default: "Thursday"
-#: ECLecture.py
-msgid "Thursday"
-msgstr ""
+#. Default: "If there is an enrollment limit, specify the maximum number of participants"
+#: content/ECLecture.py
+msgid = "help_max_participants"
+msgstr = ""
 
-#. Default: "Friday"
-#: ECLecture.py
-msgid "Friday"
-msgstr ""
+#. Default: "Registration link"
+#: content/ECLecture.py
+msgid = "label_join_url"
+msgstr = ""
 
-#. Default: "Saturday"
-#: ECLecture.py
-msgid "Saturday"
-msgstr ""
+#. Default: "Link to the registration for this course"
+#: content/ECLecture.py
+msgid = "help_join_url"
+msgstr = ""
 
-#. Default: "Sunday"
-#: ECLecture.py
-msgid "Sunday"
-msgstr ""
+#. Default: "Directory entry"
+#: content/ECLecture.py
+msgid = "label_directory_entry"
+msgstr = ""
+
+#. Default: "Link to the directory entry for this course"
+#: content/ECLecture.py
+msgid = "help_directory_entry"
+msgstr = ""
+
+#. Default: "Associated group"
+#: content/ECLecture.py
+msgid = "label_associated_group"
+msgstr = ""
+
+#. Default: "You can associate a group with this course to represent its participants"
+#: content/ECLecture.py
+msgid = "help_associated_group"
+msgstr = ""
+
+#. Default: "Available resources"
+#: content/ECLecture.py
+msgid = "label_available_resourcess"
+msgstr = ""
+
+#. Default: "Enter available resources for this course. Title  is the name of a resource as shown to the user; URL must be a path inside this site or an URL to an external source; Icon is optional."
+#: content/ECLecture.py
+msgid = "help_available_resources"
+msgstr = ""
+
+#. Default: "Body Text"
+#: content/ECLecture.py
+msgid = "label_body_text"
+msgstr = ""
+
+#. Default: "Enter course information"
+#: content/ECLecture.py
+msgid = "help_body_text"
+msgstr = ""
+
