--- a/i18n/eduComponents.pot
+++ b/i18n/eduComponents.pot
@@ -129,7 +129,7 @@ msgstr ""
 
 #. Default: "Enter user name of the instructor"
 #: content/ECLecture.py
-msgid "help_instructor"
+msgid "help_instructors"
 msgstr ""
 
 #. Default: "Link to the registration for this course"
@@ -230,8 +230,13 @@ msgstr ""
 
 #. Default: "Instructor"
 #: ./skins/ECLecture/ecl_view.pt
-#: ./skins/ECLecture/folder_lectures_view.pt
 msgid "label_instructor"
+msgstr ""
+
+#. Default: "Instructor"
+#: ./skins/ECLecture/ecl_view.pt
+#: ./skins/ECLecture/folder_lectures_view.pt
+msgid "label_instructors"
 msgstr ""
 
 #. Default: "Registration link"
