--- a/i18n/eduComponents.pot
+++ b/i18n/eduComponents.pot
@@ -369,3 +369,7 @@ msgstr ""
 msgid "yearly"
 msgstr ""
 
+#. Default: "Today's Lectures"
+#: skins/ECLecture/portlet_ecl.pt
+msgid "portlet_ecl_title"
+msgstr ""
