Added registration functionality.  Some parts are still provisional, translations are missing.

--- a/i18n/eduComponents.pot
+++ b/i18n/eduComponents.pot
@@ -273,7 +273,7 @@ msgstr ""
 
 #. Default: "Click here to register for this lecture"
 #: ./skins/ECLecture/ecl_view.pt
-msgid "label_register"
+msgid "label_enroll"
 msgstr ""
 
 #. Default: "Registration"
