--- a/i18n/eduComponents-de.po
+++ b/i18n/eduComponents-de.po
@@ -273,7 +273,7 @@ msgstr "Turnus"
 
 #. Default: "Click here to register for this lecture"
 #: ./skins/ECLecture/ecl_view.pt
-msgid "label_register"
+msgid "label_enroll"
 msgstr "Klicken Sie hier, um sich für die Lehrveranstaltung anzumelden"
 
 #. Default: "Registration"
