--- a/i18n/eduComponents.pot
+++ b/i18n/eduComponents.pot
@@ -359,6 +359,7 @@ msgstr ""
 msgid "recurrence_text"
 msgstr ""
 
+
 #. Default: "weekly"
 #: ECLecture.py
 msgid "weekly"
@@ -372,4 +373,25 @@ msgstr ""
 #. Default: "Today's Lectures"
 #: skins/ECLecture/portlet_ecl.pt
 msgid "portlet_ecl_title"
+msgstr ""
+
+
+#. Default: "Please login in to see if you are already enrolled in this course."
+#: skins/ECLecture/ecl_view.pt
+msgid "label_login_to_see_enrollment"
+msgstr ""
+
+#. Default: "Click here to cancel your enrollment in this course"
+#: skins/ECLecture/ecl_view.pt
+msgid "label_cancellation"
+msgstr ""
+
+#. Default: "<b>Note:</b> You are enrolled in this course.</p>"
+#: skins/ECLecture/ecl_view.pt
+msgid "note_enrolled"
+msgstr ""
+
+#. Default: "(currently enrolled: ${number})"
+#: skins/ECLecture/ecl_view.pt
+msgid "current_enrollment"
 msgstr ""
