--- a/i18n/eduComponents-de.po
+++ b/i18n/eduComponents-de.po
@@ -399,3 +399,25 @@ msgstr "(aktuell angemeldet: ${number})"
 #: skins/ECLecture/ecl_view.pt
 msgid "label_enrollment_limit_reached"
 msgstr "Die maximale Teilnehmerzahl wurde erreicht."
+
+
+#. Default: "You have been successfully enrolled."
+#: skins/ECLecture/ecl_register.cpy
+msgid "enrollment_sucessful"
+msgstr "Sie haben sich erfolgreich angemeldet."
+
+#. Default: "Enrollment failed, please contact the instructor."
+#: skins/ECLecture/ecl_register.cpy
+msgid "enrollment_failed"
+msgstr "Ihre Anmeldung ist fehlgeschlagen. Bitte kontaktieren Sie den Dozenten."
+
+#. Default: "You are no longer enrolled."
+#: skins/ECLecture/ecl_register.cpy
+msgid "cancellation_successful"
+msgstr "Sie sind nicht länger angemeldet."
+
+#. Default: "Cancellation of enrollment failed, please contact the instructor."
+#: skins/ECLecture/ecl_register.cpy
+msgid "cancellation_failed"
+msgstr "Ihre Abmeldung ist fehlgeschlagen. Bitte kontaktieren Sie den Dozenten."
+
