Implement improvement proposal #5.
- In ECLecture.py: New method getGroupMembersMailto(), which returns a
  mailto: link for a list of users.  In the default mode, the current
  user's address is removed; in bcc mode, the current user's address
  is used for To:

- In ecl_participants.pt: Added a second mailto: link, which uses Bcc:
  for the participants.

--- a/i18n/eduComponents-de.po
+++ b/i18n/eduComponents-de.po
@@ -182,6 +182,11 @@ msgstr "Zugeordnete Gruppe"
 msgid "send_mail_to_all_participants"
 msgstr "E-Mail an alle Teilnehmer"
 
+#. Default: "Send e-mail to all participants using Bcc:"
+#: ./skins/ECLecture/ecl_participants.pt
+msgid "send_mail_to_all_participants_bcc"
+msgstr "E-Mail an alle Teilnehmer mittels Bcc:"
+
 #. Default: "Available resources"
 #: content/ECLecture.py
 msgid "label_available_resourcess"
