--- a/i18n/eduComponents.pot
+++ b/i18n/eduComponents.pot
@@ -177,6 +177,11 @@ msgstr ""
 msgid "label_associated_group"
 msgstr ""
 
+#. Default: "# Participants"
+#: ./skins/ECLecture/ecl_participants.pt
+msgid "label_number_participants"
+msgstr ""
+
 #. Default: "Send e-mail to all participants"
 #: ./skins/ECLecture/ecl_participants.pt
 msgid "send_mail_to_all_participants"
