--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+# Changes in release 1.3 (2008-09-xx)
+
+- Complete re-design for Plone-3.0 compatibility
+
 # Changes in release 1.2.1 (2008-01-06)
 
 - Added Plone-3.0 compatibility / removed deprecation warnings
