--- a/i18n/eduComponents-de.po
+++ b/i18n/eduComponents-de.po
@@ -400,6 +400,11 @@ msgstr "Klicken Sie hier, um sich von dieser Lehrveranstaltung abzumelden"
 msgid "note_enrolled"
 msgstr "<strong>Hinweis:</strong> Sie sind für diese Lehrveranstaltung angemeldet."
 
+#. Default: "You are enrolled in this course."
+#: skins/ECLecture/ecl_view.pt
+msgid "link_enrolled"
+msgstr "You are enrolled in this course."
+
 #. Default: "(currently enrolled: ${number})"
 #: skins/ECLecture/ecl_view.pt
 msgid "current_enrollment"
