--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,6 @@
-# Changes in release 1.3 (2008-09-xx)
+# Changes in release 1.3 (2008-12-09)
 
-- Complete re-design for Plone-3.0 compatibility
+- Complete re-implementation for Plone-3.x
 
 # Changes in release 1.2.1 (2008-01-06)
 
