--- a/Products/ECLecture/CHANGES.txt
+++ b/Products/ECLecture/CHANGES.txt
@@ -1,6 +1,11 @@
-# Changes in release 1.3 (2008-12-09)
+History
+=======
 
-- Complete re-implementation for Plone-3.x
+# Changes in release 1.3 (2008-09-24)
+
+- ECLecture was completly re-implemented with support for Plone  3.x. 
+  It is now eggified and uploaded to PyPI.  An old-style tarball 
+  distribution is still available at plone.org.
 
 # Changes in release 1.2.1 (2008-01-06)
 
