--- a/Products/ECLecture/CHANGES.txt
+++ b/Products/ECLecture/CHANGES.txt
@@ -1,6 +1,11 @@
 History
 =======
 
+# Changes in release 1.4 (2010-xx-xx)
+
+- Fixed issue: Plone's default view methods (folder_summary_view, 
+  folder_tabular_view, and folder_listing) does not work for ECFolder.
+
 # Changes in release 1.3 (2008-09-24)
 
 - ECLecture was completly re-implemented with support for Plone  3.x. 
