--- a/Products/ECLecture/CHANGES.txt
+++ b/Products/ECLecture/CHANGES.txt
@@ -1,7 +1,10 @@
 History
 =======
 
-# Changes in release 1.4 (2010-xx-xx)
+# Changes in release 1.4 (2011-04-01)
+
+- Added compatibility for Plone 4. Plone 3.x support has been dropped.
+  Plone 3 users should use ECLecture 1.3.x.
 
 - Fixed issue: Plone's default view methods (folder_summary_view, 
   folder_tabular_view, and folder_listing) does not work for ECFolder.
