--- a/Products/ECLecture/i18n/eduComponents-de.po
+++ b/Products/ECLecture/i18n/eduComponents-de.po
@@ -403,7 +403,7 @@ msgstr "Klicken Sie hier, um sich von dieser Lehrveranstaltung abzumelden"
 #. Default: "<b>Note:</b> You are enrolled in this course.</p>"
 #: skins/ECLecture/ecl_view.pt
 msgid "note_enrolled"
-msgstr "<strong>Hinweis:</strong> Sie sind für diese Lehrveranstaltung angemeldet."
+msgstr "Sie sind für diese Lehrveranstaltung angemeldet."
 
 #. Default: "You are enrolled in this course."
 #: skins/ECLecture/ecl_view.pt
