--- a/Products/ECLecture/CHANGES.txt
+++ b/Products/ECLecture/CHANGES.txt
@@ -1,14 +1,22 @@
 History
 =======
 
-# Changes in release 1.3 (2008-09-24)
+# Changes in release 1.3.1 (2010-04-26)
+
+- Fixed issue: Plone's default view methods (folder_summary_view, 
+  folder_tabular_view, and folder_listing) does not work for ECFolder.
+
+- Fixed issue: Icons for lecture resources are not shown. 
+
+
+# Changes in release 1.3 (2009-09-24)
 
 - ECLecture was completly re-implemented with support for Plone  3.x. 
   It is now eggified and uploaded to PyPI.  An old-style tarball 
   distribution is still available at plone.org.
 
 
-# Changes in release 1.2.1 (2008-01-06)
+# Changes in release 1.2.1 (2008-03-01)
 
 - Added Plone-3.0 compatibility / removed deprecation warnings
 
