--- a/Products/ECLecture/i18n/eduComponents-de.po
+++ b/Products/ECLecture/i18n/eduComponents-de.po
@@ -135,7 +135,7 @@ msgstr "Benutzernamen oder Namen der Dozenten; ein Name pro Zeile"
 #. Default: "Link to the registration for this course"
 #: content/ECLecture.py
 msgid "help_join_url"
-msgstr "Link zur Anmeldeseite"
+msgstr "Link zur Anmeldeseite, z. B. ecl_register"
 
 #. Default: "Location for this course"
 #: content/ECLecture.py
@@ -252,7 +252,7 @@ msgstr "Dozenten"
 #. Default: "Registration link"
 #: content/ECLecture.py
 msgid "label_join_url"
-msgstr "Link zur Anmeldung"
+msgstr "Link zur Anmeldung. Nutzen Sie 'ecl_register', falls ECLecture die Verwaltung der Anmeldungen übernehmen soll."
 
 #. Default: "Location"
 #: ./skins/ECLecture/ecl_view.pt
@@ -298,6 +298,11 @@ msgstr "Anmeldung"
 msgid "link_to_registration"
 msgstr "Anmeldung"
 
+#. Default: "Note:"
+#: ./skins/ECLecture/ecl_view.pt
+msgid "box_note"
+msgstr "Hinweis:"
+
 #. Default: "Note: There is an enrollment limit for this course."
 #: ./skins/ECLecture/ecl_view.pt
 msgid "notice_limited"
@@ -308,7 +313,7 @@ msgstr "Die Teilnehmerzahl dieser Veranstaltung ist beschränkt."
 #. Default: "Note: This course requires ${registration}."
 #: ./skins/ECLecture/ecl_view.pt
 msgid "notice_registration"
-msgstr "Hinweis: Für diese Veranstaltung ist eine ${registration} erforderlich."
+msgstr "Für diese Veranstaltung ist eine ${registration} erforderlich."
 
 #  ${registration} will be replaced with the text specified in
 #  link_to_registration.
@@ -398,7 +403,7 @@ msgstr "Klicken Sie hier, um sich von dieser Lehrveranstaltung abzumelden"
 #. Default: "<b>Note:</b> You are enrolled in this course.</p>"
 #: skins/ECLecture/ecl_view.pt
 msgid "note_enrolled"
-msgstr "<strong>Hinweis:</strong> Sie sind für diese Lehrveranstaltung angemeldet."
+msgstr "Sie sind für diese Lehrveranstaltung angemeldet."
 
 #. Default: "You are enrolled in this course."
 #: skins/ECLecture/ecl_view.pt
