--- a/Products/ECLecture/CHANGES.txt
+++ b/Products/ECLecture/CHANGES.txt
@@ -1,10 +1,19 @@
 History
 =======
 
-# Changes in release 1.4 (2010-xx-xx)
+# Changes in release 1.4 (2011-08-10)
+
+- Added compatibility for Plone 4. Plone 3.x support has been dropped.
+  Plone 3 users should use ECLecture 1.3.x.
+
+
+# Changes in release 1.3.1 (2010-04-26)
 
 - Fixed issue: Plone's default view methods (folder_summary_view, 
   folder_tabular_view, and folder_listing) does not work for ECFolder.
+
+- Fixed issue: Icons for lecture resources are not shown. 
+
 
 # Changes in release 1.3 (2008-09-24)
 
@@ -12,9 +21,11 @@ History
   It is now eggified and uploaded to PyPI.  An old-style tarball 
   distribution is still available at plone.org.
 
+
 # Changes in release 1.2.1 (2008-01-06)
 
 - Added Plone-3.0 compatibility / removed deprecation warnings
+
 
 # Changes in release 1.2 (2007-06-27)
 
