--- a/Products/ECLecture/CHANGES.txt
+++ b/Products/ECLecture/CHANGES.txt
@@ -1,6 +1,11 @@
 History
 =======
 
+# Changes in release 1.4.1 (unreleased)
+
+- Added Spanish translation.
+  [macagua]
+
 # Changes in release 1.4 (2011-08-10)
 
 - Added compatibility for Plone 4. Plone 3.x support has been dropped.
